--- a/Packages/manifest.json
+++ b/Packages/manifest.json
@@ -11,15 +11,18 @@
     }
   ],
   "dependencies": {
-    "com.cysharp.r3": "1.2.5",
-    "com.cysharp.unitask": "2.5.8",
-    "com.cysharp.zstring": "2.5.1",
+    "com.cysharp.r3": "1.2.9",
+    "com.cysharp.unitask": "2.5.10",
+    "com.cysharp.zstring": "2.6.0",
     "com.unity.collab-proxy": "2.5.2",
-    "com.unity.feature.development": "1.0.1",
-    "com.unity.textmeshpro": "3.0.6",
-    "com.unity.timeline": "1.7.6",
-    "com.unity.ugui": "1.0.0",
+    "com.unity.feature.development": "1.0.2",
+    "com.unity.timeline": "1.8.6",
+    "com.unity.ugui": "2.0.0",
     "com.unity.visualscripting": "1.9.4",
+    "org.nuget.observablecollections": "3.1.1",
+    "org.nuget.observablecollections.r3": "3.1.1",
+    "org.nuget.system.collections.immutable": "8.0.0",
+    "com.unity.modules.accessibility": "1.0.0",
     "com.unity.modules.ai": "1.0.0",
     "com.unity.modules.androidjni": "1.0.0",
     "com.unity.modules.animation": "1.0.0",
@@ -50,9 +53,6 @@
     "com.unity.modules.video": "1.0.0",
     "com.unity.modules.vr": "1.0.0",
     "com.unity.modules.wind": "1.0.0",
-    "com.unity.modules.xr": "1.0.0",
-    "org.nuget.observablecollections": "2.1.4",
-    "org.nuget.observablecollections.r3": "2.1.4",
-    "org.nuget.system.collections.immutable": "8.0.0"
+    "com.unity.modules.xr": "1.0.0"
   }
 }
